--- a/src/styles.css
+++ b/src/styles.css
@@ -84,16 +84,15 @@ body {
   padding: 10px 0;
 }
 
-.nav a.current,
-.nav a:hover {
+.nav a.current,.nav a:hover {
   color: #6fd0f7;
   font-weight: bold;
 }
 
 .main-content {
-  height: 36vh;
+  height: 40vh;
   display: flex;
-  flex-direction: column;
+  flex-direction: r;
   justify-content: center;
   align-items: center;
   text-align: center;
@@ -122,7 +121,7 @@ footer {
   margin-top: auto;
   background-color: #585656;
   color: #fff;
-  text-align: left;
+  text-align: center;
   padding: 15px 20px;
   bottom: 0;
   left: 0;
